--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
-    <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css"
-    />
-    <!-- style sheets  -->
-    <link rel="stylesheet" href="/css/general.css" />
-    <link rel="stylesheet" href="/css/admin/nav.css" />
-    <link rel="stylesheet" href="/css/chatGPT.css" />
-    <title>Admin-Dashboard</title>
-  </head>
-  <body data-userid="<%= user._id %>">
-    <div class="progress" id="PreLoaderBar">
-      <div class="indeterminate"></div>
-    </div>
-    <%- include("./nav.ejs") %>
-    <main>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css" />
+  <!-- style sheets  -->
+  <link rel="stylesheet" href="/css/general.css" />
+  <link rel="stylesheet" href="/css/admin/nav.css" />
+  <link rel="stylesheet" href="/css/chatGPT.css" />
+  <link rel="stylesheet" href="/css/admin/dashboard.css" />
+  <title>Admin-Dashboard</title>
+</head>
+
+<body data-userid="<%= user._id %>">
+  <div class="progress" id="PreLoaderBar">
+    <div class="indeterminate"></div>
+  </div>
+  <%- include("./nav.ejs") %>
+    <header>
       <h1>Admin Dashboard</h1>
       <p>Welcome admin</p>
+    </header>
+    <main>
       <%- include("../chatGPT.ejs") %>
     </main>
     <!-- processing bar -->
@@ -42,5 +41,6 @@
         }
       };
     </script>
-  </body>
+</body>
+
 </html>
