--- a/views/student/nav.ejs
+++ b/views/student/nav.ejs
@@ -1,7 +1,7 @@
 <header>
   <!--Navigation-->
   <nav id="nav">
-    <img src="/img/logos/DSK-JF-light-logo.png" alt="" />
+    <img src="/img/logos/DSK-JF-drak-transparent-logo.png" alt="logo" />
     <div class="navigation">
       <div class="secondary-nav">
         <ul>
