--- a/public/css/student/course.css
+++ b/public/css/student/course.css
@@ -1,27 +1,70 @@
-.parent{
+#instructorName {
+  width: 173px;
+}
+
+#submit {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  background-color: rgb(45, 182, 27);
+  box-shadow: rgba(38, 209, 32, 0.24) 0px 8px 16px 0px;
+  color: #ffffff;
+  border: none;
+  border-radius: 6px;
+  padding: 8px 16px;
+  cursor: pointer;
+}
+
+form div:last-child {
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 10px;
+}
+
+.courses {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
-  margin: 20px;
-
-}
-.services-card {
-  display: flex;
   justify-content: center;
-  align-items: center;
-  border: 1px solid red;
-  width: 220px;
-  height: 280px;
-}
-.services-card img {
-  width: 100%;
-  
-}
-.services-card h3 {
-  font-size: 25px;
-  margin: 20px;
-}
-.services-card p {
-  font-size: 15px;
+  gap: 10%;
+  margin: 4%;
+  border-bottom: #23232e79 1px solid;
 }
 
+.card {
+  width: 200px;
+  margin-bottom: 20px;
+  margin-top: 25px;
+  border: 3px solid #e5e5e5;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(22, 22, 22, 0.1);
+  transition: transform 0.3s ease-in-out;
+  background-color: #ffffff;
+  padding: 10px;
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+    rgba(100, 100, 126, 0.25) 0px 50px 100px -20px,
+    rgba(167, 167, 167, 0.3) 0px 30px 60px -30px;
+}
+
+.card:hover {
+  transform: scale(1.09);
+}
+
+.image img {
+  width: 100%;
+  height: auto;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.article-body {
+  padding: 10px;
+}
+
+.article-body h2 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0;
+  text-align: center;
+  color: #333333;
+}
