--- a/public/css/student/home.css
+++ b/public/css/student/home.css
@@ -13,7 +13,6 @@ body {
 /* Navigation*/
 nav {
   width: 100%;
-  background-color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -22,6 +21,7 @@ nav {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15);
   z-index: 999;
   transition: 0.3s;
+  background-color: rgb(24, 24, 49);
 }
 nav.scroll {
   padding: 0vw 8vw;
@@ -40,11 +40,11 @@ nav .items {
 nav .items i {
   font-size: 20px; /*Adjust the font size as needed */
   margin: 0 10px; /* Adjust the margin as needed */
-  color: #999; /* Adjust the icon color as needed */
+  color: #fdc938; /* Adjust the icon color as needed */
 }
 
 nav .items i:hover {
-  color: #555; /* Adjust the hover color as needed */
+  color: #fdc938; /* Adjust the hover color as needed */
 }
 .items::after,
 .items::before {
@@ -128,7 +128,7 @@ nav .items i:hover {
   margin-right: 10px;
 }
 .secondary-nav a {
-  color: black;
+  color: white;
   text-decoration: none;
   padding: 8px;
   transition: 0.3s;
@@ -156,7 +156,7 @@ nav .items i:hover {
 }
 
 .secondary-nav .dropdown-content a {
-  color: #333;
+  color: rgb(0, 0, 0);
   padding: 8px;
   text-decoration: none;
   display: block;
@@ -169,10 +169,12 @@ nav .items i:hover {
   position: relative;
   height: 58px;
   width: 250px;
+  color: white;
 }
 
 .secondary-nav .search .input {
-  background-color: #fff;
+  background-color: rgb(24, 24, 49);
+  color: white;
   border: 0;
   font-size: 18px;
   padding: 10px;
@@ -182,7 +184,21 @@ nav .items i:hover {
 }
 
 .secondary-nav .btn {
-  background-color: #fff;
+  background-color: rgb(24, 24, 49);
+  color: white;
+  border: 0;
+  cursor: pointer;
+  font-size: 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 50px;
+  width: 50px;
+  transition: 0.3s ease;
+}
+.secondary-nav .btn:hover {
+  background-color: rgb(24, 24, 49);
+  color: #fdc938;
   border: 0;
   cursor: pointer;
   font-size: 20px;
@@ -201,6 +217,8 @@ nav .items i:hover {
 
 .secondary-nav .search.active .input {
   width: 200px;
+  background-color: white;
+  color: #fdc938;
 }
 
 .secondary-nav .search.active .btn {
@@ -227,6 +245,7 @@ nav .items i:hover {
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   max-width: 70%;
+  border-radius: 8px;
 }
 
 h1 {
@@ -344,12 +363,13 @@ h2 {
   margin-top: 20px;
 }
 
-.card {
+.requests .card {
   background-color: #fff;
   padding: 10px;
   margin-bottom: 10px;
   border-radius: 5px;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
 }
 
 .details {
@@ -365,6 +385,8 @@ h2 {
   margin-right: 5px;
   border-radius: 5px;
   cursor: pointer;
+  display: flex;
+  justify-content: space-between;
 }
 
 .reject-btn {
