edited the inner course student

--- a/views/student/nav.ejs
+++ b/views/student/nav.ejs
@@ -8,15 +8,15 @@
           <li><a href="/student/<%= user._id %>">Home</a></li>
           <li><a href="/student/<%= user._id %>/courses">Courses</a></li>
           <li class="dropdown">
-            <a href="#" class="dropbtn">My Courses <i class="fas fa-caret-down"></i></a>
+            <a href="#" class="dropbtn"
+              >My Courses <i class="fas fa-caret-down"></i
+            ></a>
             <div class="dropdown-content">
-              <% if (courses.length> 0) { %>
-                <% courses.forEach((course)=> { %>
-                  <a href="/student/<%= user._id %>/courseInner/<%= course._id %>">
-                    <%= course.title %>
-                  </a>
-                  <% }); %>
-                    <% } %>
+              <% if (courses.length> 0) { %> <% courses.forEach((course)=> { %>
+              <a href="/student/<%= user._id %>/courseInner/<%= course._id %>">
+                <%= course.title %>
+              </a>
+              <% }); %> <% } %>
             </div>
           </li>
         </ul>
@@ -30,7 +30,12 @@
         <!-- Replace with your notifications icon -->
       </div>
       <div class="profile">
-        <img src="/img/default/defaultPP.png" alt="user image" onclick="showMenu()" id="profilePic" />
+        <img
+          src="/img/default/defaultPP.png"
+          alt="user image"
+          onclick="showMenu()"
+          id="profilePic"
+        />
         <div class="list" id="profileMenu">
           <ul>
             <li><a href="/student/settings">Manage your account</a></li>
@@ -41,3 +46,39 @@
     </div>
   </nav>
 </header>
+<script>
+  let menu = document.getElementById("profileMenu");
+
+  function showMenu() {
+    menu.classList.toggle("active-list");
+  }
+  document.addEventListener("click", function (e) {
+    if (
+      menu.classList.contains("active-list") &&
+      !menu.contains(e.target) &&
+      !document.getElementById("profilePic").contains(e.target)
+    ) {
+      menu.classList.remove("active-list");
+    }
+  });
+
+  // Nav on scroll
+  window.onscroll = function () {
+    var navbar = document.getElementById("nav");
+    if (window.pageYOffset > 5) {
+      navbar.classList.add("scroll");
+    } else {
+      navbar.classList.remove("scroll");
+    }
+  };
+
+  // Search
+  const search = document.querySelector(".search");
+  const btn = document.querySelector(".btn");
+  const input = document.querySelector(".input");
+
+  btn.addEventListener("click", () => {
+    search.classList.toggle("active");
+    input.focus();
+  });
+</script>
