--- a/public/css/student/innercourse.css
+++ b/public/css/student/innercourse.css
@@ -233,3 +233,43 @@ p {
 .project-btn a:hover {
   background-color: #0056b3;
 }
+
+/* view details  */
+.view-project {
+  margin: 10px;
+}
+
+.view-project-form {
+  background-color: #f8f8f8;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.project-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+  color: #333;
+}
+
+.project-description {
+  margin-top: 10px;
+  color: #555;
+}
+
+.project-details {
+  margin-top: 20px;
+}
+
+.detail {
+  margin-bottom: 8px;
+}
+
+.detail strong {
+  font-weight: bold;
+}
+
+.detail:last-child {
+  margin-bottom: 0;
+}
