--- a/views/student/courses.ejs
+++ b/views/student/courses.ejs
@@ -2,44 +2,77 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/student/course.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css" />
+    <!-- toastify -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!-- style sheets -->
+    <link rel="stylesheet" href="/css/general.css" />
     <link rel="stylesheet" href="/css/student/home.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
-
-    <script src="https://kit.fontawesome.com/0b0cd0c012.js" crossorigin="anonymous"></script>
-    <title>All Courses</title>
+    <link rel="stylesheet" href="/css/student/course.css" />
+    <link rel="stylesheet" href="/css/chatGPT.css" />
+    <title>All courses</title>
 </head>
 
-<body>
+<body data-userid="<%= user._id %>">
+    <div class="progress" id="PreLoaderBar">
+        <div class="indeterminate"></div>
+    </div>
     <%- include("./nav.ejs") %>
-        <section class="parent">
-            <% if (allCourses.length) {%>
-                <% allCourses.forEach(course=> { %>
-                    <section class="services-card">
-                        <span class="container">
-                            <h3>
-                                <%=course.title%>
-                            </h3>
-                            <img src="<%=course.coverPic%>" width="10%" />
-                            <p>Enrolled studens:<%=course.numberOfStudents %>
-                            </p>
-                            <p>
-                                <%=course.description%>
-                            </p>
-                        </span>
-                    </section>
-                    <%}); %>
-        </section>
-        <% } else { %>
-            <div class="no-data">
-                <p>No data found!</p>
-            </div>
-            <% } %>
+        <main>
+
+            <% if (courses.length> 0) { %>
+                <section class="courses">
+                    <% courses.forEach(c=> { %>
+
+                        <a id="anchor" href="/student/<%= user._id %>/courses/<%= c._id %>">
+                            <article class="card">
+                                <div class="image">
+                                    <img src="<%= c.coverPic %>" alt="cover picture" />
+                                </div>
+                                <div class="article-body">
+                                    <h2>
+                                        <%= c.title %>
+                                    </h2>
+                                </div>
+                            </article>
+                        </a>
+
+                        <% }); %>
+                </section>
+                <% } else { %>
+                    <div>
+                        <p>no courses to show</p>
+                    </div>
+                    <% } %>
+                        <div class="pagination">
+                            <ul>
+                                <% const number=Math.ceil(coursesLength / coursesPerPage) || 0 %>
+                                    <%for(let i=0; i < number; i++) { %>
+                                        <li><a value="<%=i+1 %>" href="?p=<%=i %>">
+                                                <%=i+1 %>
+                                            </a></li>
+                                        <% } %>
+                            </ul>
+                        </div>
+                        <!-- processing bar -->
+                        <script>
+                            document.onreadystatechange = function () {
+                                if (document.readyState === "complete") {
+                                    console.log(document.readyState);
+                                    document.getElementById("PreLoaderBar").style.display = "none";
+                                }
+                            };
+                        </script>
 </body>
 
 </html>
