--- a/views/registration/signup.ejs
+++ b/views/registration/signup.ejs
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/1c2c2462bf.js" crossorigin="anonymous"></script>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -57,6 +59,48 @@
             <i class="fa-regular fa-eye-slash eye" id="closedEye"></i>
           </div>
 
+          
+    <div>
+      <div class="progress">
+        <div
+          id="password-strength"
+          class="progress-bar"
+          role="progressbar"
+          aria-valuenow="40"
+          aria-valuemin="0"
+          aria-valuemax="100"
+          style="width: 0%"
+        ></div>
+      </div>
+      
+      <ul class="list-unstyled">
+        <li class="">
+          <span class="low-upper-case">
+            <i class="fas fa-circle" aria-hidden="true"></i>
+            &nbsp;Lowercase &amp; Uppercase
+          </span>
+        </li>
+        <li class="">
+          <span class="one-number">
+            <i class="fas fa-circle" aria-hidden="true"></i>
+            &nbsp;Number (0-9)
+          </span>
+        </li>
+        <li class="">
+          <span class="one-special-char">
+            <i class="fas fa-circle" aria-hidden="true"></i>
+            &nbsp;Special Character (!@#$%^&*)
+          </span>
+        </li>
+        <li class="">
+          <span class="eight-character">
+            <i class="fas fa-circle" aria-hidden="true"></i>
+            &nbsp;Atleast 8 Character
+          </span>
+        </li>
+      </ul>
+    </div>
+
           <p style="color: red" id="error"></p>
 
           <div class="recaptcha">
@@ -72,6 +116,97 @@
         </form>
       </div>
     </main>
+
+    <script>
+
+      let state = false;
+      let password = document.getElementById("password");
+      let passwordStrength = document.getElementById("password-strength");
+      let lowUpperCase = document.querySelector(".low-upper-case i");
+      let number = document.querySelector(".one-number i");
+      let specialChar = document.querySelector(".one-special-char i");
+      let eightChar = document.querySelector(".eight-character i");
+      
+      password.addEventListener("keyup", function(){
+          let pass = document.getElementById("password").value;
+          checkStrength(pass);
+      });
+      
+      
+      
+      function checkStrength(password) {
+          let strength = 0;
+      
+          //If password contains both lower and uppercase characters
+          if (password.match(/([a-z].*[A-Z])|([A-Z].*[a-z])/)) {
+              strength += 1;
+              lowUpperCase.classList.remove('fa-circle');
+              lowUpperCase.classList.add('fa-check');
+          } else {
+              lowUpperCase.classList.add('fa-circle');
+              lowUpperCase.classList.remove('fa-check');
+          }
+          //If it has numbers and characters
+          if (password.match(/([0-9])/)) {
+              strength += 1;
+              number.classList.remove('fa-circle');
+              number.classList.add('fa-check');
+          } else {
+              number.classList.add('fa-circle');
+              number.classList.remove('fa-check');
+          }
+          //If it has one special character
+          if (password.match(/([!,%,&,@,#,$,^,*,?,_,~])/)) {
+              strength += 1;
+              specialChar.classList.remove('fa-circle');
+              specialChar.classList.add('fa-check');
+          } else {
+              specialChar.classList.add('fa-circle');
+              specialChar.classList.remove('fa-check');
+          }
+          //If password is greater than 7
+          if (password.length > 7) {
+              strength += 1;
+              eightChar.classList.remove('fa-circle');
+              eightChar.classList.add('fa-check');
+          } else {
+              eightChar.classList.add('fa-circle');
+              eightChar.classList.remove('fa-check');   
+          }
+      
+          // If value is less than 2
+          if (strength == 0) {
+              passwordStrength.classList.remove('progress-bar-warning');
+              passwordStrength.classList.remove('progress-bar-success');
+              passwordStrength.classList.add('progress-bar-danger');
+              passwordStrength.style = 'width: 0%';
+          }
+          if (strength == 1) {
+              passwordStrength.classList.remove('progress-bar-warning');
+              passwordStrength.classList.remove('progress-bar-success');
+              passwordStrength.classList.add('progress-bar-danger');
+              passwordStrength.style = 'width: 25%';
+          } else if (strength == 2) {
+              passwordStrength.classList.remove('progress-bar-success');
+              passwordStrength.classList.remove('progress-bar-danger');
+              passwordStrength.classList.add('progress-bar-warning');
+              passwordStrength.style = 'width: 50%';
+            } else if (strength == 3) {
+              passwordStrength.classList.remove('progress-bar-success');
+              passwordStrength.classList.remove('progress-bar-danger');
+              passwordStrength.classList.add('progress-bar-warning');
+              passwordStrength.style = 'width: 75%';
+          }
+           else if (strength == 4) {
+              passwordStrength.classList.remove('progress-bar-warning');
+              passwordStrength.classList.remove('progress-bar-danger');
+              passwordStrength.classList.add('progress-bar-success');
+              passwordStrength.style = 'width: 100%';
+          }
+      }
+          </script>
+          
+    </script>
     <!-- Google reCAPTCHA -->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- eye -->
