--- a/views/instructor/home.ejs
+++ b/views/instructor/home.ejs
@@ -20,7 +20,7 @@
 </head>
 
 <body data-userid="<%= user._id %>">
-  <%- include("./nav.ejs") %>
+  <%- include("./partials/nav.ejs") %>
     <main>
       <h1>My Courses</h1>
       <section>
