--- a/views/instructor/inner-course.ejs
+++ b/views/instructor/inner-course.ejs
@@ -22,9 +22,9 @@
 </head>
 
 <body data-userid="<%= user._id %>" data-courseid="<%= course._id %>">
-  <%- include("./nav.ejs") %>
+  <%- include("./partials/nav.ejs") %>
     <main>
-      <%- include("./inner-course-header.ejs") %>
+      <%- include("./partials/inner-course-header.ejs") %>
         <section class="display">
           <!-- link -->
           <div class="card">
