--- a/views/student/notifications.ejs
+++ b/views/student/notifications.ejs
@@ -48,7 +48,7 @@
                                 <hr />
                                 <div class="mb-3">
                                     <div class="cb2">
-                                        <h2>Get Notifications From All doctors</h2>
+                                        <h2>Get Notifications From All instructors</h2>
                                         <input type="checkbox" hidden="hidden" id="cb-n4" />
                                         <label class="switch" for="cb-n4"></label>
                                     </div>
