--- a/views/instructor/viewAll.ejs
+++ b/views/instructor/viewAll.ejs
@@ -32,9 +32,9 @@
 </head>
 
 <body data-userid="<%= user._id %>" data-courseid="<%= course._id %>">
-  <%- include("./nav.ejs") %>
+  <%- include("./partials/nav.ejs") %>
     <main>
-      <%- include("./inner-course-header.ejs") %>
+      <%- include("./partials/inner-course-header.ejs") %>
         <section>
           <% if (students.length) { %>
             <table class="profile-table">
