--- a/views/student/home.ejs
+++ b/views/student/home.ejs
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/css/student/home.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
+    <script
+      src="https://kit.fontawesome.com/0b0cd0c012.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/css/student/home.css" />
+    <link rel="stylesheet" href="/css/student/nav.css" />
+    <link rel="stylesheet" href="/css/student/footer.css" />
 
-  <script src="https://kit.fontawesome.com/0b0cd0c012.js" crossorigin="anonymous"></script>
-  <title>Student Page</title>
-</head>
+    <title>Student Page</title>
+  </head>
 
-<body>
-  <%- include("./nav.ejs") %>
+  <body>
+    <%- include("./partials/nav.ejs") %>
     <main>
       <!-- Main Body Section -->
       <div class="main_body">
@@ -23,9 +35,7 @@
             <div class="left-card">
               <h1>Latest updates</h1>
               <div class="update-details">
-                <h2>
-                  <%= courseTitles.instructorId %> added new Material
-                </h2>
+                <h2><%= courseTitles.instructorId %> added new Material</h2>
                 <p class="update-type">New Content: Useful links</p>
                 <p class="update-description">
                   Description: Dear students, I've uploaded new useful material
@@ -92,18 +102,7 @@
     </main>
 
     <!-- footer  -->
-    <footer>
-      <div class="copywrite">
-        <p>Copyright @2023 All rights reserved</p>
-        <div class="pro-links">
-          <i class="fab fa-facebook-f"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-linkedin-in"></i>
-        </div>
-      </div>
-    </footer>
-
-    
+   <%- include("./partials/footer.ejs") %>
 
     <!-- Jokes API -->
     <script>
@@ -124,6 +123,5 @@
 
       generateButton.addEventListener("click", fetchJoke);
     </script>
-</body>
-
+  </body>
 </html>
