--- a/views/student/partials/nav.ejs
+++ b/views/student/partials/nav.ejs
@@ -3,7 +3,7 @@
   <nav id="nav">
     <img src="/img/logos/DSK-JF-drak-transparent-logo.png" alt="logo" />
     <div class="navigation">
-      <div class="secondary-nav">
+      <div class="nav-list">
         <ul>
           <li><a href="/student/<%= user._id %>">Home</a></li>
           <li><a href="/student/<%= user._id %>/courses">Courses</a></li>
