--- a/views/admin/courseInner.ejs
+++ b/views/admin/courseInner.ejs
@@ -54,6 +54,32 @@
           <div class="course-head">
             <div class="c-name">
               <h2><%= course.title %></h2>
+              <div>
+                <form
+                  id="form1"
+                  enctype="multipart/form-data"
+                  style="border: 1px black solid"
+                >
+                  <input
+                    type="file"
+                    name="file"
+                    id="fileToUpload"
+                    accept="image/png,image/gif,image/jpeg , image/jpg"
+                  />
+                  <div class="small font-italic text-muted mb-4">
+                    JPG or PNG no larger than 5 MB
+                  </div>
+                  <div class="button-container">
+                    <button
+                      type="submit"
+                      class="btn btn-primary"
+                      id="upload-new-image"
+                    >
+                      Upload new image
+                    </button>
+                  </div>
+                </form>
+              </div>
               <p>
                 Numbers of students Enrolled : <%= course.numberOfStudents%>
               </p>
@@ -178,6 +204,36 @@
       });
 
       // << End >> form Validation
+    </script>
+
+    <!-- change course picture  -->
+
+    <script>
+      document.getElementById("form1").addEventListener("submit", async (e) => {
+        e.preventDefault();
+
+        console.log("etneen");
+        try {
+          const fileToUpload = document.getElementById("fileToUpload").files[0];
+          const formData = new FormData();
+          formData.append("file", fileToUpload);
+          console.log("wahed");
+          const res = await fetch(
+            "/admin/courses/<%= course._id %>/changeppcourse",
+            {
+              method: "PUT",
+              body: formData,
+            }
+          );
+
+          const data = await res.json();
+          if (data.msg) location.reload();
+          else location.assign("/error");
+        } catch (err) {
+          console.log(err);
+          location.assign("/error");
+        }
+      });
     </script>
     <!-- processing bar -->
     <script>
