--- a/views/student/allCourses-inner.ejs
+++ b/views/student/allCourses-inner.ejs
@@ -1,192 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>student / CourseInner</title>
-    <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="/css/general.css" />
-    <link rel="stylesheet" href="/css/student/nav.css" />
-    <link rel="stylesheet" href="/css/admin/couresInner.css" />
 
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>
+    <% title %>
+  </title>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="/css/student/innercourse.css" />
+  <link rel="stylesheet" href="/css/student/nav.css" />
+  <link rel="stylesheet" href="/css/student/footer.css" />
 
-    <script
-      src="https://kit.fontawesome.com/0b0cd0c012.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
 
-  <body>
-    <div class="progress" id="PreLoaderBar">
-      <div class="indeterminate"></div>
-    </div>
-    <%- include("./partials/nav.ejs") %>
-    <main>
-      <section id="course-inner">
-        <div class="overview">
-          <img class="course-img" src="<%= course.coverPic %>" alt="" />
-          <div class="course-head">
-            <div class="c-name">
-              <h2><%= course.title %></h2>
-              <p>
-                Numbers of students Enrolled : <%= course.numberOfStudents%>
-              </p>
-            </div>
-          </div>
-          <section>
-            <h3>Instructor</h3>
-            <div class="tutor">
-              <img src="<%= instructor.profilePic %>" alt="" />
-              <div class="tutor-det">
-                <h5><%= instructor.firstName %> <%= instructor.lastName %></h5>
+  <script src="https://kit.fontawesome.com/0b0cd0c012.js" crossorigin="anonymous"></script>
+
+  <style></style>
+</head>
+
+<body>
+  <header>
+    <!-- Navigation -->
+    <nav id="nav">
+      <img src="/img/logos/DSK-JF-drak-transparent-logo.png" alt="logo" />
+      <div class="navigation">
+        <div class="nav-list">
+          <ul>
+            <li><a href="/student/<%= user._id %>">Home</a></li>
+            <li><a href="/student/<%= user._id %>/courses">Courses</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropbtn">My Courses <i class="fas fa-caret-down"></i></a>
+              <div class="dropdown-content">
+                <% if (courses.length> 0) { %> <% courses.forEach((course)=> { %>
+                    <a href="/student/<%= user._id %>/courseInner/<%= course._id %>">
+                      <%= course.title %>
+                    </a>
+                    <% }); %>
+                      <% } %>
               </div>
-            </div>
-          </section>
-          <section>
-            <h3>Course Overview</h3>
-            <p><%= course.description %></p>
-          </section>
+            </li>
+          </ul>
+          <div class="search">
+            <input type="text" class="input" placeholder="Search..." />
+            <button class="btn"><i class="fas fa-search"></i></button>
+          </div>
         </div>
-        <section>
-          <% if (students.length) {%>
-          <table>
-            <tr>
-              <th></th>
-              <th>Name</th>
-              <th>Add</th>
-            </tr>
-
-            <% students.forEach(item=> { %>
-            <tr class="user" id="user">
-              <td>
-                <input type="checkbox" class="checkbox" />
-                <div class="right-and-wrong" style="display: none">
-                  <i
-                    class="fa-solid fa-check"
-                    style="color: green; cursor: pointer"
-                  ></i>
-                  <i
-                    class="fa-solid fa-xmark"
-                    style="color: red; cursor: pointer"
-                  ></i>
-                </div>
-              </td>
-              <td>
-                <div class="container">
-                  <input
-                    type="text"
-                    value="<%= item.firstName + ' ' + item.lastName %>"
-                    readonly
-                  />
-                </div>
-              </td>
-              <td>
-                <a href="/admin/<%= course._id %>/addStudent/<%= item._id %>"
-                  >Add</a
-                >
-              </td>
-            </tr>
-            <% }); %>
-          </table>
-          <% } %>
-        </section>
+        <div class="items">
+          <i class="fas fa-bell"></i>
+          <!-- Replace with your notifications icon -->
+        </div>
+        <div class="profile">
+          <img src="/img/default/defaultPP.png" alt="user image" onclick="showMenu()" id="profilePic" />
+          <div class="list" id="profileMenu">
+            <ul>
+              <li><a href="/student/settings">Manage your account</a></li>
+              <li><a href="/logout">Log out</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section id="course-inner">
+      <!-- main section -->
+      <div class="overview">
+        <img class="course-img" src="<%= course.coverPic %>" alt="" />
+        <div class="course-head">
+          <div class="c-name">
+            <h2>
+              <%= course.title %>
+            </h2>
+            <div class="star">
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+              <i class="far fa-star"></i>
+            </div>
+            <p>
+              <%= course.description %>
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- Instructor section -->
+      <section class="instructor-section">
+        <h3>
+          <%= instructor.firstName %>
+            <%= instructor.lastName %>
+        </h3>
+        <div class="tutor">
+          <!-- professor img  -->
+          <img src="<%= instructor.profilePic %>" alt="" />
+        </div>
       </section>
-    </main>
-    <script type="module">
-      const menu = document.getElementById("addNewCourse");
-      const newCourseBtn = document.getElementById("newCourseBtn");
+    </section>
+  </main>
+  <footer>
+    <div class="copywrite">
+      <p>Copyright @2023 All rights reserved</p>
+      <div class="pro-links">
+        <i class="fab fa-facebook-f facebook"></i>
+        <i class="fab fa-instagram instagram"></i>
+        <i class="fab fa-linkedin-in linkedin"></i>
+      </div>
+    </div>
+  </footer>
+  <script>
+    let menu = document.getElementById("profileMenu");
 
-      newCourseBtn.addEventListener("click", () => {
-        menu.classList.toggle("activee");
-      });
+    function showMenu() {
+      menu.classList.toggle("active-list");
+    }
+    document.addEventListener("click", function (e) {
+      if (
+        menu.classList.contains("active-list") &&
+        !menu.contains(e.target) &&
+        !document.getElementById("profilePic").contains(e.target)
+      ) {
+        menu.classList.remove("active-list");
+      }
+    });
 
-      document.addEventListener("dblclick", function (e) {
-        if (
-          menu.classList.contains("activee") &&
-          !menu.contains(e.target) &&
-          !newCourseBtn.contains(e.target)
-        ) {
-          menu.classList.remove("activee");
-          document.getElementById("form").reset();
-        }
-      });
+    // Nav on scroll
+    window.onscroll = function () {
+      var navbar = document.getElementById("nav");
+      if (window.pageYOffset > 5) {
+        navbar.classList.add("scroll");
+      } else {
+        navbar.classList.remove("scroll");
+      }
+    };
 
-      // << Start >> form Validation
-      import { validateForm } from "/js/formValidation.js";
-      const form = document.getElementById("form");
-      const error = document.getElementById("error");
-      const addStudentButton = document.getElementsByClassName("addStudent");
+    // Search
+    const search = document.querySelector(".search");
+    const btn = document.querySelector(".btn");
+    const input = document.querySelector(".input");
 
-      Array.from(addStudentButton).forEach((button) => {
-        const studentId = button.dataset.studentid;
-        form.addEventListener("submit", async (e) => {
-          e.preventDefault();
-          error.style.color = "red";
-          const errorMsg = validateForm(form);
-          console.log(studentId);
-          if (errorMsg) return (error.innerHTML = errorMsg);
-          // start Add Student
-          try {
-            const res = await fetch(
-              "/courses/<%= course.id%>/addstudent/" + studentId,
-              {
-                method: "PUT",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({
-                  courseId: "<%= course._id %>",
-                  studnetId: studentId,
-                }),
-              }
-            );
-            const data = await res.json();
-            if (data.msg) {
-              error.style.color = "green";
-              error.innerHTML = "Added";
-              location.reload();
-            } else if (data.err) location.assign("/error");
-          } catch (err) {
-            console.log(err);
-            location.assign("/error");
-          }
-        });
-      });
+    btn.addEventListener("click", () => {
+      search.classList.toggle("active");
+      input.focus();
+    });
+  </script>
+</body>
 
-      // << End >> form Validation
-    </script>
-    <!-- processing bar -->
-    <script>
-      document.onreadystatechange = function () {
-        if (document.readyState === "complete") {
-          console.log(document.readyState);
-          document.getElementById("PreLoaderBar").style.display = "none";
-        }
-      };
-    </script>
-  </body>
 </html>
